tests/ui/ferrocene/compiler-arguments/explain/explain_bad-code.rs
//@ check-fail
//@ compile-flags: --explain junk
//~? ERROR not a valid error code

fn main() {}

// ferrocene-annotations: um_rustc_explain
